# Forma

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  compile_commands.json  config.json  forma  mkdocs.yml  myprog  source.cpp  source.d  todo.md
.github/hooks/: pre-commit.sh
.github/workflows/: dev  dev.yml
docs/: Makefile  config.json  index.md  make.bat
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt
examples/ex0/: main.cpp
examples/hello_world/: main.cpp
forma_files/: Makefile  forma.cpp  forma.d  forma.hpp  forma_headers.hpp  gl_headers.hpp  gl_macros.hpp  glad.cpp  input.cpp  input.hpp
forma_files/framework/: framework_headers.hpp  gl_settings.cpp  gl_settings.hpp  initialize.cpp  initialize.d  initialize.hpp
forma_files/input/: input.cpp  input.hpp
forma_files/object/: Makefile  object.cpp  object.hpp  object_class.cpp  object_class.hpp  object_headers.hpp  shader.cpp  shader.hpp  shader_class.cpp  shader_class.hpp
forma_files/shader/: shader.cpp  shader.hpp
forma_files/types/: quad.hpp  triple.hpp  type_headers.hpp
forma_files/window/: window.cpp  window.d  window.hpp  window_class.cpp  window_class.hpp  window_headers.hpp
forma_resources/: fs.glsl  vs.glsl
include/: core.hpp  forma.hpp  forma_core.hpp  gl.hpp  glad.h
include/entity/: entity.hpp  entity_base.hpp
include/error/: error.hpp
include/forma/: color.hpp  forma.hpp  gl.hpp  glad.h  image.hpp  key.hpp  log.hpp  math.hpp  shader.hpp  version.h  version.hpp  version.hpp.in  window.hpp
include/forma/gl/: gl.hpp  glad.h  glfw.hpp
include/forma/graphics/: color.hpp  graphics.hpp  window.hpp  window_builder.hpp
include/forma/util/: pair.hpp  util.hpp
include/gl/: glad.h
include/glfw/: glfw.hpp
include/input/: input.hpp  key.hpp
include/log/: log.hpp  logger.hpp
include/shader/: shader.hpp
include/video/: callback.hpp  window.hpp
include/window/: callback.hpp  window.hpp
resources/: vs.glsl
resources/shaders/: frag.glsl  fragment_shader.glsl  vertex.glsl  vertex_shader.glsl
samples/: CMakeLists.txt
samples/pong/: main.cpp
source/: .forma_core.cpp.swp  .forma_core.hpp.swp  .main.cpp.swp  Makefile  core.cpp  forma.hpp  forma_core.cpp  forma_core.hpp  gl_headers.hpp  glfw.cpp  glfw.hpp  main.cpp
source/entity/: entity.cpp
source/error/: error.cpp
source/gl/: glad.cpp
source/glad/: glad.cpp
source/input/: input.cpp  input.hpp  key.cpp
source/log/: log.cpp  logger.cpp
source/object/: object.cpp  object.hpp  object_headers.hpp  vertex_attr.cpp  vertex_attr.hpp
source/shader/: shader.cpp  shader.hpp
source/video/: callback.cpp  window.cpp
source/window/: .window.cpp.swp  .window.hpp.swp  callback.cpp  window.cpp  window.hpp  window_external.cpp  window_external.hpp  window_headers.hpp
src/: color.cpp  forma.cpp  forma.hpp  gl.cpp  gl.hpp  glad.c  glad_egl.c  glad_egl.h  image.cpp  log.cpp  logger.hpp  main.cpp  shader.cpp  window.cpp  window.hpp
src/gl/: gl.cpp  glad.c  glfw.cpp
src/glad/: glad.h
src/graphics/: graphics.cpp  window.cpp
src/window/: context.cpp  context.hpp  glad.cpp  glad.hpp  window_class.cpp  window_class.hpp
test/: Makefile  test_forma_core.cpp  tmp.cpp
test/error/: test_error.cpp
test/input/: test_input.cpp  test_key.cpp
test/log/: test_log.cpp
