MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(EXAMPLES "${CMAKE_CURRENT_SOURCE_DIR}")

message("${FORMA_LIBRARY}")

FOREACH(EXAMPLE ${EXAMPLES})
  FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR} "${EXAMPLE}/*.cpp")
  message("${SRC_FILES}")
  ADD_EXECUTABLE(${EXAMPLE} ${SRC_FILES})
  TARGET_INCLUDE_DIRECTORIES(${EXAMPLE} PUBLIC ${FORMA_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(${EXAMPLE} ${FORMA_LIBRARY})
ENDFOREACH()

